<?xml version="1.0"?>
<!--
 The MIT License (MIT)

 This file is part of the jetbot_ros_webconsole package (https://github.com/bobboteck/jetbot_ros_webconsole).
 Copyright (c) 2020 Roberto D'Amico (Bobboteck).

 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:
 
 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
-->
<package format="2">
  <name>jetbot_ros_webconsole</name>
  <version>1.0.0</version>
  <description>jetbot_ros_webconsole a ROS Web Console to remotely control your Jetbot.</description>
  <author>Roberto D'Amico</author>
  <maintainer email="roberto.damico@officinerobotiche.it">Roberto D'Amico</maintainer>
  <license>MIT</license>
  <url>https://github.com/bobboteck/jetbot_ros_webconsole</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <exec_depend>roswww</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

</package>